major general improvements and bug fixes